--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ h1, h2, h3, h4 {
     flex: 1;
     padding: 2vw;
     padding-top: 0;
-    display: none;
+    /* display: none; */
 }
 
 .main-column {
@@ -67,8 +67,21 @@ h1, h2, h3, h4 {
     padding: 5vw;
 }
 
+.side-nav a {
+    display: block;
+    padding: .5em;
+    text-decoration: none;
+}
+
+.hide-on-xs {
+    display: none;
+}
+
 @media only screen and (min-width: 600px) {
-    .side-column {
-        display: block;
+    .hide-on-xs {
+        display: inline;
     }
+    /* .side-column {
+        display: block;
+    } */
 }
